<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="News Title"
        android:textSize="30sp"
        android:textColor="@color/light_blue_0099cc" />

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="10dp"
        android:text="summary content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_summary"
        android:layout_marginTop="10dp"
        android:text="name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/light_blue_33B5E5" />

    <TextView
        android:id="@+id/tv_published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_author_name"
        android:layout_alignBottom="@+id/tv_author_name"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tv_author_name"
        android:text="@string/published_at" />

    <TextView
        android:id="@+id/tv_commented_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_published"
        android:layout_alignBottom="@+id/tv_published"
        android:layout_toRightOf="@+id/tv_published"
        android:text="@string/comment"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_read_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_commented_count"
        android:layout_alignBottom="@+id/tv_commented_count"
        android:layout_toRightOf="@+id/tv_commented_count"
        android:text="@string/read"
        android:visibility="gone" />

</RelativeLayout>